--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <title>Phone e-commerce</title>
   </head>
   <body>
